--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_dotenv: ^5.1.0
+  # flutter_launcher_icons: ^0.13.1
   get_it: ^7.6.0
   injectable: ^2.1.2
   internet_connection_checker: ^1.0.0+1
@@ -28,8 +29,14 @@ dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.0
   injectable_generator:
+flutter_launcher_icons:
+  flutter_launcher_icons: "^0.13.1"
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
 
 flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/app_icon.png
